# cognova-backend

./: .env.production  .gitignore  Dockerfile  base_repository.py  clean.js  connection_pool.py  deploy.sh  dev.sh  ecosystem.config.json  init.sh  llm.sh  main.py  models.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: deploy.yml
app/: README.md  config.py  db.py  dependencies.py  docker-compose.yaml  errors.py  exception_handlers.py  exceptions.py  main.py  models.py  prompting.py  utils.py
app/algorithms/: tf_idf.py
app/api/: dependencies.py
app/api/routes/: chat.py  sources.py
app/controllers/: chat.py  web_sources.py
app/core/: config.py
app/database/: __init__.py  connection_pool.py  dependencies.py  models.py  repository.py
app/domain/: errors.py  interfaces.py  models.py  requests.py
app/products/: endpoints.py  models.py
app/prompts/: default.py  seller.py
app/providers/chat/: __init__.py  cloudflare.py
app/repositories/: chat.py  chats.py  source.py  sources.py  vector.py  vectors.py
app/routers/: chat.py  sources.py
app/services/: chat.py  embeddings.py  search.py  sources.py  vector.py
app/techniques/: webscrapper.py
app/tools/: __init__.py  functions.py  tools.py
app/tools/providers/: business.py
app/utils/: __init__.py
cloudflare/: embedding_worker.js  generative_worker.js
data/: symbols.txt  sys_prompt.md
prisma/: schema.prisma
socials/: package-lock.json  package.json  setup.sh
socials/instagram/: webhook.py
socials/webhooks/: instagram.js  test.js  whatsapp.js
(+6 files in other folders)
